# HoroscopeGPT

./: .gitignore
HoroscopeGPT/: pyproject.toml  users_signs.pkl
HoroscopeGPT/horoscopegpt/: main.py
