[tool.poetry]
name = "horoscopegpt"
version = "0.1.0"
description = ""
authors = ["gavril-s <gavril.senkevich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.219"
openai = "^0.27.8"
python-telegram-bot = {extras = ["job-queue"], version = "^20.3"}
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
